Mon Nov 29 11:24:05 2004  Chad Elliott  <elliott_c@ociweb.com>

        * templates/automake.mpd:

          Added top, macros and local markers.  It already had a bottom
          marker.

Thu Nov 25 06:55:36 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/MakeWorkspaceCreator.pm:
        * modules/NMakeWorkspaceCreator.pm:
        * modules/WorkspaceCreator.pm:

          Provide target translation to avoid collisions between directory
          names and target names.  Incidentally Borland Make does not have
          this problem, it is able to distinguish between directories and
          targets.  Thanks to Steve Huston <shuston@riverace.com> for
          bringing this to my attention.

        * templates/vc7.mpd:

          Ensure that static libraries and import libraries got to 'libout'
          regardless of whether 'dllout' is set or not.  Thanks to Marek
          Brudka <mbrudka@elka.pw.edu.pl> for reporting this.

Wed Nov 24 08:17:01 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Fixed a bug where the directory portion would not contain a
          trailing slash when using gendir.  This would cause some
          non-existent file to be added automatically.

        * templates/automake.mpd:
        * templates/bmake.mpd:
        * templates/em3vcp.mpd:
        * templates/ghs.mpd:
        * templates/make.mpd:
        * templates/nmake.mpd:
        * templates/vc6dsp.mpd:
        * templates/vc7.mpd:
        * templates/vc7csharp.mpd:
        * templates/vc7vb.mpd:

          When gendir is used, attempt to automatically make the specified
          directory.

Tue Nov 23 07:52:03 2004  Chad Elliott  <elliott_c@ociweb.com>

        * config/boost_base.mpb:
        * config/boost_date_time.mpb:
        * config/boost_filesystem.mpb:
        * config/boost_prg_exec_monitor.mpb:
        * config/boost_regex.mpb:
        * config/boost_signals.mpb: