@@ -15,7 +15,8 @@ Usage: mwc.pl [-global <file>] [-include <directory>] [-recurse]
               [-noreldefs] [-notoplevel] [-static] [-genins] [-expand_env]
               [-value_template <NAME+=VAL | NAME=VAL | NAME-=VAL>]
               [-value_project <NAME+=VAL | NAME=VAL | NAME-=VAL>]
-              [-feature_file <file name>] [-make_coexistence]
+              [-make_coexistence] [-feature_file <file name>]
+              [-features <feature definitions>]
               [-exclude <directories>] [-name_modifier <pattern>]
               [-apply_project] [-version] [-into <directory>]
               [-language <cplusplus | csharp | java | vb>]
@@ -35,6 +36,7 @@ Usage: mwc.pl [-global <file>] [-include <directory>] [-recurse]
        -feature_file   Specifies the feature file to read before processing.
                        The default feature file is default.features under the
                        config directory.
+       -features       Specifies the feature list to set before processing.
        -genins         Generate .ins files for use with prj_install.pl.
        -global         Specifies the global input file.  Values stored
                        within this file are applied to all projects.
@@ -169,6 +171,11 @@ to values used for the 'requires' and 'avoids' keywords.  If a feature is
 required and is not enable then the project will not be created.  If a
 feature is to be avoided and it is enabled then the project will not be
 created.
+
+The -features specifies additional list of features values. Values
+specified by this option overwrite values from features files.
+Example:
+mwc.pl -features "qos=1,ssl=0" ace.mwc
 
 Running only the Project Generator
 ----------------------------------
